--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = themes/hugo-kiera
 	url = https://github.com/avianto/hugo-kiera
 
+[submodule "public"]
+	path = public
+	url = https://github.com/adbose/adbose.github.io.git
+	branch = master
